2003-02-20 TADA Tadashi <sho@spc.gr.jp>
	* add BlogWiki style.

2003-02-13 TADA Tadashi <sho@spc.gr.jp>
	* follow to tDiary 1.5.2.20030212.

2003-02-12 TADA Tadashi <sho@spc.gr.jp>
	* document bugs fixed.

2003-01-27 TADA Tadashi <sho@spc.gr.jp>
	* support style: remove blogio.rb and add blog_style.rb. see UPDATE.

2003-01-08 TADA Tadashi <sho@spc.gr.jp>
	* archive.rb: insert <div> into <form> in archive_dropdown.

2003-01-01 TADA Tadashi <sho@spc.gr.jp>
	* README.en: update. thanks Mizuho <gha@intrastore.cdc.com>.

2002-12-25 TADA Tadashi <sho@spc.gr.jp>
	* release 1.5.2.

2002-12-24 TADA Tadashi <sho@spc.gr.jp>
	* whatsnew-list.rb: change last-modified of oldest data in @diaries.

2002-12-20 TADA Tadashi <sho@spc.gr.jp>
	* whatsnew-list.rb: refine extra_erb.

2002-12-19 TADA Tadashi <sho@spc.gr.jp>
	* lm.rb: add span.lm.

2002-12-18 TADA Tadashi <sho@spc.gr.jp>
	* whatsnew-list: adjust last modified of @diaries as whatsnew-list file.

2002-12-13 TADA Tadashi <sho@spc.gr.jp>
	* whatsnew-list: remove hidden article from the list.

2002-11-25 TADA Tadashi <sho@spc.gr.jp>
	* release 1.5.1.

2002-11-24 TADA Tadashi <sho@spc.gr.jp>
	* title_navi plugin: title_navi.max option.
	* add README.en.

2002-11-22 TADA Tadashi <sho@spc.gr.jp>
	* item length limit on whatsnew-list and recent-entry[2].
	* tdiary.conf.sample: fix typo.

2002-11-21 TADA Tadashi <sho@spc.gr.jp>
	* add plugin/recent-entry2.rb.
	* add comments into plugin files.
	* add README, COPYING.

2002-11-20 TADA Tadashi <sho@spc.gr.jp>
	* add arcgive_dropdown plugin.
	* archive.rb: list to reverse.

2002-11-18 TADA Tadashi <sho@spc.gr.jp>
	* Initial revision