@@ -1,3 +1,7 @@
+2003-02-21 TADA Tadashi <sho@spc.gr.jp>
+	* BlogWiki style: modify blockquote grammar.
+	* modify TDiaryForm class only runnning on Blog mode.
+
 2003-02-20 TADA Tadashi <sho@spc.gr.jp>
 	* add BlogWiki style.
 
